Upload featuretypes
